pkg/ibmvpc/examples/out/analysis_out/filters_split_lb_subnet_all_vpcs_.txt
Endpoint connectivity for VPC lbvpc
Public Internet (all ranges) => vsi0-ctrl-sub2[10.240.66.4] : All Connections
alb[LoadBalancer] => vsi0-sub1[10.240.0.5] : All Connections ** 
alb[LoadBalancer] => vsi0-sub2[10.240.64.5] : All Connections ** 
alb[LoadBalancer] => vsi0-sub3[10.240.128.4] : All Connections ** 
alb[LoadBalancer] => vsi1-sub1[10.240.0.4] : All Connections ** 
alb[LoadBalancer] => vsi1-sub2[10.240.64.4] : All Connections ** 
alb[LoadBalancer] => vsi1-sub3[10.240.128.5] : All Connections ** 
vsi0-ctrl-sub1[10.240.2.4] => alb[LoadBalancer] : protocol: ICMP,UDP ** 
vsi0-ctrl-sub1[10.240.2.4] => alb[LoadBalancer] : protocol: TCP *  ** 
vsi0-ctrl-sub2[10.240.66.4] => Public Internet (all ranges) : All Connections
vsi0-ctrl-sub2[10.240.66.4] => alb[LoadBalancer] : protocol: ICMP,UDP ** 
vsi0-ctrl-sub2[10.240.66.4] => alb[LoadBalancer] : protocol: TCP *  ** 
vsi0-ctrl-sub2[10.240.66.4] => vsi0-sub2[10.240.64.5] : All Connections
vsi0-ctrl-sub2[10.240.66.4] => vsi0-sub3[10.240.128.4] : All Connections
vsi0-ctrl-sub2[10.240.66.4] => vsi1-sub1[10.240.0.4] : All Connections
vsi0-ctrl-sub2[10.240.66.4] => vsi1-sub2[10.240.64.4] : All Connections
vsi0-ctrl-sub2[10.240.66.4] => vsi1-sub3[10.240.128.5] : All Connections
vsi0-sub1[10.240.0.5] => alb[LoadBalancer] : All Connections ** 
vsi0-sub2[10.240.64.5] => alb[LoadBalancer] : All Connections ** 
vsi0-sub2[10.240.64.5] => vsi0-ctrl-sub2[10.240.66.4] : All Connections
vsi0-sub2[10.240.64.5] => vsi0-sub3[10.240.128.4] : All Connections
vsi0-sub2[10.240.64.5] => vsi1-sub1[10.240.0.4] : All Connections
vsi0-sub2[10.240.64.5] => vsi1-sub2[10.240.64.4] : All Connections
vsi0-sub2[10.240.64.5] => vsi1-sub3[10.240.128.5] : All Connections
vsi0-sub3[10.240.128.4] => alb[LoadBalancer] : All Connections ** 
vsi0-sub3[10.240.128.4] => vsi0-ctrl-sub2[10.240.66.4] : All Connections
vsi0-sub3[10.240.128.4] => vsi0-sub2[10.240.64.5] : All Connections
vsi0-sub3[10.240.128.4] => vsi1-sub1[10.240.0.4] : All Connections
vsi0-sub3[10.240.128.4] => vsi1-sub2[10.240.64.4] : All Connections
vsi0-sub3[10.240.128.4] => vsi1-sub3[10.240.128.5] : All Connections
vsi1-sub1[10.240.0.4] => alb[LoadBalancer] : All Connections ** 
vsi1-sub1[10.240.0.4] => vsi0-ctrl-sub2[10.240.66.4] : All Connections
vsi1-sub1[10.240.0.4] => vsi0-sub2[10.240.64.5] : All Connections
vsi1-sub1[10.240.0.4] => vsi0-sub3[10.240.128.4] : All Connections
vsi1-sub1[10.240.0.4] => vsi1-sub2[10.240.64.4] : All Connections
vsi1-sub1[10.240.0.4] => vsi1-sub3[10.240.128.5] : All Connections
vsi1-sub2[10.240.64.4] => alb[LoadBalancer] : All Connections ** 
vsi1-sub2[10.240.64.4] => vsi0-ctrl-sub2[10.240.66.4] : All Connections
vsi1-sub2[10.240.64.4] => vsi0-sub2[10.240.64.5] : All Connections
vsi1-sub2[10.240.64.4] => vsi0-sub3[10.240.128.4] : All Connections
vsi1-sub2[10.240.64.4] => vsi1-sub1[10.240.0.4] : All Connections
vsi1-sub2[10.240.64.4] => vsi1-sub3[10.240.128.5] : All Connections
vsi1-sub3[10.240.128.5] => alb[LoadBalancer] : All Connections ** 
vsi1-sub3[10.240.128.5] => vsi0-ctrl-sub2[10.240.66.4] : All Connections
vsi1-sub3[10.240.128.5] => vsi0-sub2[10.240.64.5] : All Connections
vsi1-sub3[10.240.128.5] => vsi0-sub3[10.240.128.4] : All Connections
vsi1-sub3[10.240.128.5] => vsi1-sub1[10.240.0.4] : All Connections
vsi1-sub3[10.240.128.5] => vsi1-sub2[10.240.64.4] : All Connections

TCP connections for which response is not permitted are marked with * 

connections marked with  **  are an over-approximation, not all private IPs have the same connectivity
